...
    <string name="breakpoint">\\</string>

    <string name="title_editor">Editor</string>
    <string name="title_editing">Editing %1$s</string>
    <string name="title_runner">Runner</string>
    <string name="title_running">Running %1$s</string>
    <string name="title_exit_dialog">Confirm</string>
    <string name="title_settings_run_dialog">Run</string>
    <string name="title_settings_save_dialog">Save</string>

    <string name="message_save_exit_dialog">Save before closing?</string>
    <string name="message_exit_running_program_dialog">Stop running program?</string>
    <string name="message_hit_breakpoint">Hit breakpoint</string>
...
